--- a/styles/large_footer.css
+++ b/styles/large_footer.css
@@ -1,30 +1,50 @@
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   #tsparticles-custom {
     position: absolute;
     margin: none;
     padding: none;
     width: 100%;
-    height: 400px !important;
+    height: 445px !important;
     z-index: 1;
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   #tsparticles-custom {
     position: absolute;
     margin: none;
     padding: none;
     width: 100%;
-    height: 646px !important;
+    height: 625px !important;
+    z-index: 1;
+  }
+}
+@media (max-width: 650px) {
+  #tsparticles-custom {
+    position: absolute;
+    margin: none;
+    padding: none;
+    width: 100%;
+    height: 765px !important;
+    z-index: 1;
+  }
+}
+@media (max-width: 450px) {
+  #tsparticles-custom {
+    position: absolute;
+    margin: none;
+    padding: none;
+    width: 100%;
+    height: 1025px !important;
     z-index: 1;
   }
 }
 
 .footer-parent {
-    position: relative !important;
-    z-index: 2 !important; 
-    padding-top: 32px;
-    padding-bottom: 32px;
+  position: relative !important;
+  z-index: 2 !important;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .footer {
