--- a/styles/stars_background.css
+++ b/styles/stars_background.css
@@ -1,10 +1,15 @@
 #tsparticles-background-1{
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: 100%;
   /* top: 50%; */
+  z-index: -1;
+  background-image: linear-gradient(#000000,#000000, #070009, #0A0011, #070009, #000000, #000000);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
-#tsparticles-background-2 {
+/* #tsparticles-background-2 {
   position: absolute;
   width: 100%;
   height: 20%;
@@ -27,4 +32,4 @@
   width: 100%;
   height: 20%;
   top: 80%;
-}
+} */
